fix: categories overflow

--- a/src/components/category/Category.css
+++ b/src/components/category/Category.css
@@ -24,6 +24,6 @@
 
 @media screen and (width <= 460px) {
   .category {
-    width: 100%;
+    width: 90%;
   }
 }
